# lem_in

./: .map  .map_old  .out_checker  .usr_paths  .usr_solution  CMakeLists.txt  Makefile  README.md  author  colors.sh  lem-in  out.tmp  proverka  test  test2  visualisator
.diff/: usr_map.diff.202110171410  usr_map.diff.202125041725  usr_map.diff.202155061755  usr_map.diff.202159061759
.map_err/: map_25.err.202108171408
Vizualize/: -lSDL2  Makefile  ants_move.c  ft_ants_move.c  ft_help_funct.c  ft_push_turns.c  ft_render_info.c  ft_render_init.c  main.c  parse_turns.c  push_to_render.c  script.bash  vis_help.c  visualise.h
Vizualize/header/: visualise.h
inc/: lemin.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_atoll.c  ft_atoull.c  ft_bit.c  ft_bzero.c  ft_count.c  ft_free_split.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnum.c  ft_isprint.c  ft_itoa.c  ft_lltoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print_error.c  ft_putchar.c  ft_putchar_buf.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+49 more)
libft/ft_printf/: Makefile
libft/ft_printf/inc/: ft_printf.h
libft/ft_printf/src/: .ft_printf.h.swp  ft_bigint.c  ft_bigint_operations.c  ft_buff_manage.c  ft_color.c  ft_get_fnum.c  ft_handle.c  ft_ls_print.c  ft_parse_lfnum.c  ft_parse_nums.c  ft_print_cs.c  ft_print_diuoxb.c  ft_print_e.c  ft_print_f.c  ft_print_options.c  ft_print_prk.c  ft_printf.c  ft_printf.h  ft_set_modif.c  ft_set_opt.c  ft_set_options.c  ft_uoxb_cond.c  ft_utils_num.c  ft_utils_str.c
maps/valid/: map_flow_max
src/: Makefile  find_of_ways_struct.c  ft_add.c  ft_add_room_link.c  ft_additional_func.c  ft_bfs.c  ft_bubble_sort_restore.c  ft_buf.c  ft_card_reading.c  ft_change.c  ft_change_ribs.c  ft_change_weight.c  ft_check_connects.c  ft_check_create_room.c  ft_cleaning_struct.c  ft_collision.c  ft_connects.c  ft_coord_check.c  ft_copy.c  ft_correct_duplicates_rooms.c  ft_correct_main.c  ft_correct_map.c  ft_count.c  ft_creat_duplicate.c  ft_createroom.c  ft_del.c  ft_dijkstra.c  ft_direction.c  ft_djkastra.c  ft_error.c  ft_find_all_ways.c  ft_find_of_ways_struct.c  ft_findrooms.c  ft_flags_lemin.c  ft_ford.c  ft_free.c  ft_free_data.c  ft_free_str_split.c  ft_init.c  ft_lemin.c  (+30 more)
vis/: Makefile  ft_ants_move.c  ft_help_funct.c  ft_push_turns.c  ft_render_info.c  ft_render_init.c  main.c  visualise.h
