cmake_minimum_required(VERSION 3.17)
project(mint_v2_04_01 C)

set(CMAKE_C_STANDARD 99)

add_executable(mint_v2_04_01
        libft/ft_printf/inc/ft_printf.h
        libft/ft_printf/src/ft_print_cs.c
        libft/ft_printf/src/ft_parse_lfnum
        libft/ft_printf/src/ft_ls_print
        libft/ft_printf/src/ft_handle.c
        libft/ft_printf/src/ft_bigint.c
        libft/ft_printf/src/ft_bigint_operations.c
        libft/ft_printf/src/ft_buff_manage.c
        libft/ft_printf/src/ft_color.c
        libft/ft_printf/src/ft_parse_nums.c
        libft/ft_printf/src/ft_print_diuoxb.c
        libft/ft_printf/src/ft_print_e.c
        libft/ft_printf/src/ft_print_f.c
        libft/ft_printf/src/ft_print_options.c
        libft/ft_printf/src/ft_print_prk.c
        libft/ft_printf/src/ft_printf.c
        libft/ft_printf/src/ft_set_opt.c
        libft/ft_printf/src/ft_utils_num.c
        libft/ft_printf/src/ft_utils_str.c
        libft/ft_printf/src/ft_ls_print.c
        libft/ft_printf/src/ft_parse_lfnum.c
        libft/ft_printf/src/ft_get_fnum.c
        libft/ft_printf/src/ft_set_modif.c
        libft/ft_printf/src/ft_uoxb_cond.c
        libft/ft_abs.c
        libft/ft_atoll.c
        libft/ft_atoull.c
        libft/ft_bit.c
        libft/ft_bzero.c
        libft/ft_free_split.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isnum.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstrev.c
        libft/ft_lstsize.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_buf.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_buf.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_buf.c
        libft/ft_putstr_fd.c
        libft/ft_satoi.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strchr_count.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlen_char.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_swapptr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_ulltoa.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        src/ft_add.c
        src/ft_add_room_link.c
        src/ft_additional_func.c
        src/ft_bfs.c
        src/ft_bubble_sort_restore.c
        src/ft_card_reading.c
        src/ft_change.c
        src/ft_check_connects.c
        src/ft_check_create_room.c
        src/ft_cleaning_struct.c
        src/ft_collision.c
        src/ft_copy.c
        src/ft_correct_main.c
        src/ft_correct_map.c
        src/ft_count.c
        src/ft_creat_duplicate.c
        src/ft_del.c
        src/ft_free.c
        src/ft_lemin_buff.c
        src/ft_merge.c
        src/ft_null.c
        src/ft_path.c
        src/ft_print.c
        src/ft_split.c
        src/ft_steps.c
        src/ft_suurballe.c
        src/ft_terms.c
        src/ft_zerodata.c
        src/ft_coord_check.c
        src/lemin.h
        src/main.c)